testdata/typechecker/ok/arrays/ArrayOfArraysNull.java
int main() {
		int[][] arr;
		arr = new int[2][];
		int[] x;
		if (arr[1] == null)
			printInt(1);
		else
			printInt(2);
		printInt(arr.length);
		return 0;
}