testdata/typechecker/error/arrays/ArrayTest-err3.java
int main() {
            int[] b;
            boolean c;
            b = new int[4]; 
            c = b.length; // TE
		return 0;
}

